manifests/argocd/ingress_expose.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: ingress-argocd
spec:
  rules:
  - host: argocd.yoswal.io
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
tls:
  - hosts:
    - argocd.yoswal.io
    secretName: argocd-secret # do not change, this is provided by Argo CD
